--- a/css/style.css
+++ b/css/style.css
@@ -151,16 +151,17 @@ h1 {
 }
 .listing{
   display: block;
+  margin: 0 auto;
 }
 
 .timeline {
-  list-style: none;
+  /*list-style: none;*/
   padding: 1% 0% 1%;
   /*position: relative;*/
   background-color:  #303030;
   /*margin-bottom: 1vh;*/
   width: 80vw;
-  margin: 0 auto;
+
 }
 
 .textbox {
@@ -172,7 +173,7 @@ h1 {
   /*position: absolute;*/
   border-radius: 1vh;
   background-color: #484848;
-  color:  #E0E0E0;
+  /*color:  #E0E0E0;*/
   -webkit-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
   -moz-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
   box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
