--- a/css/style.css
+++ b/css/style.css
@@ -144,14 +144,17 @@ html {
 body{
 	background-color: #303030;
   color: #E0E0E0;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-
+  font-family: 'Slabo 27px', serif;
+  font-size: 4em;
 }
+
 .listing{
   display: block;
-  margin: 0 auto;
+  margin: auto auto 5vh 5vw;
   display: flex;
   justify-content: center;
   align-items:center;
@@ -173,7 +176,7 @@ h1 {
   border-radius: 2px;
   padding: 1vw;
   /*position: absolute;*/
-  border-radius: 1vh;
+  /*border-radius: 1vh;*/
   background-color: #484848;
   /*color:  #E0E0E0;*/
   -webkit-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
@@ -199,9 +202,14 @@ h1 {
 
 .timeline-title {
   margin-top: 1vh;
+  font-size: 2em;
+  font-family: 'Slabo 27px', serif;
+  margin: 2vh 2vw;
 }
 
 p{
 	overflow: visible;
 	text-overflow: ellipsis;
+  font-size: 1em;
+  font-family: 'Roboto', sans-serif;
 }
