--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,14 @@ body{
 
 h1 {
   font-family: 'Slabo 27px', serif;
-  font-size: 4em;
+  font-size: 12.0vw;
+  padding: 14vh 5vw 5vh 14vh;
+  text-align: center;
 }
 
+.page-header{
+  height: 100vh;
+}
 .listing{
   display: block;
   margin: auto auto 5vh 5vw;
@@ -174,7 +179,7 @@ h1 {
   width: 46vw;
   height: auto;
   border-radius: 2px;
-  padding: 1vw;
+  padding: 3vw 4vw 4vw 3vw;
   /*position: absolute;*/
   /*border-radius: 1vh;*/
   background-color: #484848;
@@ -192,6 +197,9 @@ h1 {
 	-moz-border-radius: 4.5vw;
 	-webkit-border-radius: 4.5vw;
 	border-radius: 4.5vw;
+  -webkit-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
+  box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
 }
 
 /*.timeline > .listing > .textbox:hover{
@@ -204,7 +212,7 @@ h1 {
   margin-top: 1vh;
   font-size: 2em;
   font-family: 'Slabo 27px', serif;
-  margin: 2vh 2vw;
+  margin: 0 auto 4vh auto;
 }
 
 p{
@@ -212,4 +220,5 @@ p{
 	text-overflow: ellipsis;
   font-size: 1em;
   font-family: 'Roboto', sans-serif;
+  line-height: 1.5;
 }
