--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ h1 {
 }
 
 .circle {
-
+  margin-right: 7vw;
 	width: 9vw;
 	height: 9vw;
 	background: #B21212;
@@ -217,7 +217,6 @@ h1 {
 
 p{
 	overflow: visible;
-	text-overflow: ellipsis;
   font-size: 1em;
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
