--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,9 @@ h1 {
   font-size: 12.0vw;
   padding: 14vh 5vw 5vh 14vh;
   text-align: center;
+  -webkit-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
+  box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
 }
 
 img{
@@ -164,12 +167,14 @@ img{
   height: 100vh;
   
 }
+
 .listing{
   display: block;
   margin: auto auto 5vh 5vw;
   display: flex;
-  justify-content: center;
-  align-items:center;
+  /*justify-content: center;*/
+  align-items: center;
+
 }
 
 .timeline {
@@ -179,6 +184,7 @@ img{
   background-color:  #303030;
   /*margin-bottom: 1vh;*/
   width: 80vw;
+  margin: 0 auto;
 
 }
 
@@ -198,12 +204,12 @@ img{
 
 .circle {
   margin-right: 7vw;
-	width: 9vw;
-	height: 9vw;
+	width: 10vw;
+	height: 10vw;
 	background: #B21212;
-	-moz-border-radius: 4.5vw;
-	-webkit-border-radius: 4.5vw;
-	border-radius: 4.5vw;
+	-moz-border-radius: 5vw;
+	-webkit-border-radius: 5vw;
+	border-radius: 5vw;
   -webkit-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
   -moz-box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
   box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
