--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ h1 {
   box-shadow: 0px 0px 19px 3px rgba(0,0,0,1);
 }
 
-img{
+#image{
 	float: right;
 	margin-left: 2vw;
 	margin-bottom: 2vh;
