--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ h1 {
   text-shadow: -4px 3px 0 #000000, -14px 7px 0 #B21212;
 }
 
-#image{
+.bild{
 	float: right;
 	margin-left: 2vw;
 	margin-bottom: 2vh;
